# nntprs

./: Cargo.toml
.github/workflows/: dependency-review.yml  verify-pr-commit.yml
nntprs_client/: Cargo.toml
nntprs_demo_client/: Cargo.toml
nntprs_demo_server/: Cargo.toml
nntprs_lib/: Cargo.toml
nntprs_lib/src/: errors.rs  lib.rs
nntprs_server/: Cargo.toml
