[package]
name = "nntprs-client"
edition = "2021"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
blocking = ["nntprs/blocking"]

[dependencies]
nntprs = { path = "../nntprs_lib" }
