[package]
name = "nntprs"
edition = "2021"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "nntprs"

[features]
default = []
blocking = []

[dependencies]
anyhow.workspace = true
mail-parser = { version = "0.10.2", features = ["serde"] }
thiserror.workspace = true
