[package]
name = "nntprs-server"
edition = "2021"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
blocking = ["nntprs-lib/blocking"]

[dependencies]
nntprs-lib = { path = "../nntprs_lib" }
